k8s/timeoff-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: timeoff
    labels: 
        app: timeoff
