k8s/timeoff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeoff-service
  namespace: timeoff
  labels:
    run: timeoff
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: timeoff
