k8s/timeoff-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: timeoff
    name: timeoff-ingress
    #annotations:
     #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: timeoff.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: timeoff-service
                port:
                    number: 3000
